--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,4 +8,5 @@ dependencies = [
     "apscheduler>=3.11.2",
     "fastapi[standard]>=0.133.0",
     "google-cloud-bigquery>=3.40.1",
+    "python-dotenv>=1.2.1",
 ]
