--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,5 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "fastapi[standard]>=0.133.0",
     "google-cloud-bigquery>=3.40.1",
+    "gunicorn>=25.1.0",
     "python-dotenv>=1.2.1",
+    "uvicorn>=0.41.0",
 ]
