--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "fastapi[standard]>=0.133.0",
     "google-cloud-bigquery>=3.40.1",
     "gunicorn>=25.1.0",
-    "python-dotenv>=1.2.1",
+    "httpx>=0.28.1",
+    "pydantic-settings>=2.13.1",
     "uvicorn>=0.41.0",
 ]
